# pythonic-fp

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  README.md  README.rst  index.html  pyproject.toml
.github/workflows/: static.yml
circular-array/: index.html
containers/: index.html
containers/API/v1.0.0/: index.html
deprecated/dtools/containers/: index.html
deprecated/dtools/fp/: index.html
deprecated/dtools/iterables/: index.html
deprecated/dtools/queues/: index.html
deprecated/dtools/splitends/: index.html
deprecated/pythonic-fp/circulararray/: index.html
deprecated/pythonic-fp/containers/: index.html
deprecated/pythonic-fp/fp/: index.html
deprecated/pythonic-fp/iterables/: index.html
docs/: Makefile  index.html
docs/booleans/: index.html
docs/circulararray/: index.html
docs/containers/: index.html
docs/fptools/: index.html
docs/gadgets/: index.html
docs/iterables/: index.html
docs/numpy/: index.html
docs/queues/: index.html
docs/source/: compatible_versions.rst  conf.py  coordinated_releases.rst  description.rst  development.rst  index.rst  overview.rst
docs/splitends/: index.html
iterables/: index.html
maintained/: style.css
maintained/circular-array/: index.html
maintained/circulararray/: index.html
maintained/fp/: index.html
maintained/iterables/: index.html
maintained/queues/: index.html
name_claim/: pyproject.toml
pypi_release_docs/: index.html  style.css
pypi_release_docs/circulararray/: index.html
pypi_release_docs/containers/: index.html
pypi_release_docs/fp/: index.html
pypi_release_docs/fptools/: index.html
pypi_release_docs/iterables/: index.html
pypi_release_docs/queues/: index.html
pypi_release_docs/splitends/: index.html
queues/: index.html
splitends/: index.html
tests/: test_box.py  test_lca.py
(+335 files in other folders)
