[build-system]
requires = ["flit_core>=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pythonic-fp"
version = "4.1.0"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Geoffrey R. Scheller", email = "geoffrey@scheller.com" },
]
keywords = [
  "functional",
  "pythonic",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "pythonic-fp-booleans==4.0.0",
  "pythonic-fp-circulararray==6.1.1",
  "pythonic-fp-containers==4.1.0",
  "pythonic-fp-fptools==5.4.0",
  "pythonic-fp-gadgets==4.1.0",
  "pythonic-fp-iterables==5.1.4",
  "pythonic-fp-numpy==1.0.0",
  "pythonic-fp-queues==5.1.3",
  "pythonic-fp-splitends==2.0.3",
]
dynamic = ["description"]

[project.urls]
Changelog = "https://github.com/grscheller/pythonic-fp/blob/main/CHANGELOG.md"
Homepage = "https://grscheller.github.io/pythonic-fp/"
Source = "https://github.com/grscheller/pythonic-fp"

[project.optional-dependencies]
test = [
  "pytest>=8.4.1",
]

[tool.flit.sdist]
exclude = [
  "docs/",
]

[tool.flit.module]
name = "pythonic_fp.homepage"

[tool.mypy]
explicit_package_bases = true
local_partial_types = true
namespace_packages = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true

[tool.pylsp-mypy]
enabled = true
live-mode = true
dmypy = false
strict = true
report_progress = true

[tool.ruff]
target-version = "py314"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.format]
quote-style = "single"
docstring-code-line-length = 72
